--- a/source/index.html
+++ b/source/index.html
@@ -29,7 +29,7 @@
           <picture class="logo__pic">
             <source media="(min-width: 1440px)" width="70" height="59" type="image/svg+xml" srcset="images/logo_desktop.svg">
             <source media="(min-width: 768px)" width="60" height="50" type="image/svg+xml" srcset="images/logo_tablet.svg">
-            <img width="33" height="38" src="/images/logo_mobile.svg" alt="Логотип Cat Energy">
+            <img width="33" height="38" src="images/logo_mobile.svg" alt="Логотип Cat Energy">
           </picture>
         </a>
         <a class="logo-container__logo logo logo--text" href="index.html">
@@ -37,7 +37,7 @@
           <picture class="logo__text">
             <source media="(min-width: 1440px)" width="118" height="21" type="image/svg+xml" srcset="images/logo.svg">
             <source media="(min-width: 768px)" width="101" height="18" type="image/svg+xml" srcset="images/logo.svg">
-            <img width="101" height="18" src="/images/logo.svg" alt="Логотип Cat Energy">
+            <img width="101" height="18" src="images/logo.svg" alt="Логотип Cat Energy">
           </picture>
         </a>
         <button class="logo-container__toggle logo-container__toggle--closed" type="button"><span class="visually-hidden">Открыть меню</span></button>
