--- a/source/index.html
+++ b/source/index.html
@@ -70,12 +70,12 @@
             <h3 class="card-index__title">Похудение</h3>
             <p class="card-index__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
             <div class="card-index__picture"></div>
-            <a class="card-index__link" href="catalog-slim.html">Каталог slim</a>
+            <a class="card-index__link" href="catalog.html#slim">Каталог slim</a>
           </li>
           <li class="preferences__card card-index card-index--pro">
             <h3 class="card-index__title">Набор массы</h3>
             <p class="card-index__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-            <a class="card-index__link" href="catalog-pro.html">Каталог pro</a>
+            <a class="card-index__link" href="catalog.html№pro">Каталог pro</a>
           </li>
         </ul>
       </section>
