--- a/source/program.html
+++ b/source/program.html
@@ -48,7 +48,7 @@
         <picture class="contacts-map__pic">
           <source width="1440" height="400" type="image/png" media="(min-width: 1440px)" srcset="images/map-desktop.png">
           <source width="768" height="400" type="image/png" media="(min-width: 768px)" srcset="images/map-tablet.png">
-          <img width="320" height="362" src="images/map-mobile.png">
+          <img width="320" height="362" src="images/map-mobile.png" alt="Карта Петербурга">
         </picture>
         <iframe class="contacts-map__frame visually-hidden" src="https://yandex.ru/map-widget/v1/?ll=30.325618%2C59.936778&mode=whatshere&utm_campaign=b2bpromo&utm_medium=referral&utm_source=sidesection&whatshere%5Bpoint%5D=30.322875%2C59.938280&whatshere%5Bzoom%5D=16.22&z=16.22"></iframe>
       </div>
