--- a/source/program.html
+++ b/source/program.html
@@ -13,66 +13,129 @@
   <link rel="preload" href="fonts/oswald/oswaldregular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 </head>
 
-<body>
-  <div class="page page--program">
-    <header class="page__header header" data-test="header">
-      <div class="header__container logo-container">
-        <a class="logo-container__logo logo logo--pic" href="index.html">
-          <span class="visually-hidden">Логотип Cat Energy</span>
-          <picture class="logo__pic">
-            <source media="(min-width: 1440px)" width="70" height="59" type="image/svg+xml" srcset="images/logo_desktop.svg">
-            <source media="(min-width: 768px)" width="60" height="50" type="image/svg+xml" srcset="images/logo_tablet.svg">
-            <img width="33" height="38" src="/images/logo_mobile.svg" alt="Логотип Cat Energy">
-          </picture>
-        </a>
-        <a class="logo-container__logo logo logo--text" href="index.html">
-          <span class="visually-hidden">Логотип Cat Energy</span>
-          <picture class="logo__text">
-            <source media="(min-width: 1440px)" width="118" height="21" type="image/svg+xml" srcset="images/logo.svg">
-            <source media="(min-width: 768px)" width="101" height="18" type="image/svg+xml" srcset="images/logo.svg">
-            <img width="101" height="18" src="/images/logo.svg" alt="Логотип Cat Energy">
-          </picture>
-        </a>
-        <button class="logo-container__toggle logo-container__toggle--closed" type="button"><span class="visually-hidden">Открыть меню</span></button>
+<body class="page__body body">
+  <header class="body__header header" data-test="header">
+    <div class="header__container logo-container">
+      <a class="logo-container__logo logo logo--pic" href="index.html">
+        <span class="visually-hidden">Логотип Cat Energy</span>
+        <picture class="logo__pic">
+          <source media="(min-width: 1440px)" width="70" height="59" type="image/svg+xml" srcset="images/logo_desktop.svg">
+          <source media="(min-width: 768px)" width="60" height="50" type="image/svg+xml" srcset="images/logo_tablet.svg">
+          <img width="33" height="38" src="/images/logo_mobile.svg" alt="Логотип Cat Energy">
+        </picture>
+      </a>
+      <a class="logo-container__logo logo logo--text" href="index.html">
+        <span class="visually-hidden">Логотип Cat Energy</span>
+        <picture class="logo__text">
+          <source media="(min-width: 1440px)" width="118" height="21" type="image/svg+xml" srcset="images/logo.svg">
+          <source media="(min-width: 768px)" width="101" height="18" type="image/svg+xml" srcset="images/logo.svg">
+          <img width="101" height="18" src="/images/logo.svg" alt="Логотип Cat Energy">
+        </picture>
+      </a>
+      <button class="logo-container__toggle logo-container__toggle--closed" type="button"><span class="visually-hidden">Открыть меню</span></button>
+    </div>
+    <nav class="header__nav navigation">
+      <ul class="navigation__list navigation__list--hidden">
+        <li class="navigation__item"><a href="index.html">Главная</a></li>
+        <li class="navigation__item"><a href="catalog.html">Каталог продукции</a></li>
+        <li class="navigation__item navigation__item--active"><a href="program.html">Подбор программы</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main class="body__content">
+    <section class="program">
+      <h1 class="program__title section-title section-title--l">Подбор программы</h1>
+      <p class="program__description">Заполните анкету, и мы подберем
+        программу питания для вашего кота</p>
+      <form class="program__form program-form" action="#" method="post">
+        <fieldset class="program-form__cat-info cat-info">
+          <legend class="visually-hidden">Информация о коте</legend>
+          <label class="cat-info__label" for="cat-name">Имя:*</label>
+          <input class="cat-info__cat-name cat-name" type="text" id="cat-name" name="cat-name" required>
+          <label class="cat-info__label" for="cat-weight">Вес (кг):*</label>
+          <input class="cat-info__cat-weight cat-weight" type="text" id="cat-weight" name="cat-weight" required>
+          <label class="cat-info__label" for="cat-age">Возраст (лет):</label>
+          <input class="cat-info__cat-age cat-age" type="text" id="cat-age" name="cat-age">
+        </fieldset>
+        <fieldset class="program-form__aim aim">
+          <legend class="visually-hidden">Цель питания</legend>
+          <input class="aim__input aim-slim" type="radio" id="aim-slim" name="aim-slim" checked>
+          <label class="aim__label" for="aim-slim">Похудение</label>
+          <input class="aim__input aim-pro" type="radio" id="aim-pro" name="aim-pro">
+          <label class="aim__label" for="aim-pro">Набор массы</label>
+          <input class="aim__input aim-help" type="radio" id="aim-help" name="aim-help">
+          <label class="aim__label" for="aim-help">Не знаю (нужен ваш совет)</label>
+        </fieldset>
+        <fieldset class="program-form__owner owner">
+          <legend class="owner__title section-title section-title--sm"><span>Контактные данные
+              (владельца кота)</span></legend>
+          <label class="owner__label" for="owner-email">E-mail:*</label>
+          <input class="owner__email owner-email" type="text" id="owner-email" name="owner-email" required placeholder="kuklachev@gmail.com">
+          <label class="owner__label" for="owner-phone">Телефон:*</label>
+          <input class="owner__phone owner-phone" type="text" id="owner-phone" name="owner-phone" required placeholder="8 (960) 900-60-90">
+        </fieldset>
+        <fieldset class="program-form__comment comment">
+          <legend class="comment__title section-title section-title--sm"><span>Комментарий</span></legend>
+          <label class="visually-hidden" for="comment">Рассказ о коте</label>
+          <input class="comment__input" type="text" name="comment" id="comment" placeholder="Расскажите обо всех повадках кота">
+        </fieldset>
+        <fieldset class="program-form__items add-items">
+          <legend class="comment__title section-title section-title--sm"><span>Дополнительно</span></legend>
+          <input class="add-items__input" type="checkbox" id="sweetener" name="sweetener" checked>
+          <label class="add-items label" for="sweetener">Сахарозаменитель</label>
+          <input class="add-items__input" type="checkbox" id="water" name="water">
+          <label class="add-items label" for="water">Питьевая вода</label>
+          <input class="add-items__input" type="checkbox" id="milk" name="milk">
+          <label class="add-items label" for="milk">Молоко</label>
+          <input class="add-items__input" type="checkbox" id="vitamins" name="vitamins">
+          <label class="add-items label" for="vitamins">витамины</label>
+        </fieldset>
+        <button class="button-link" type="submit">Отправить заявку</button>
+      </form>
+      <p class="program__notice">* — Обязательные поля</p>
+    </section>
+    <section class="contacts">
+      <div class="contacts__map contacts-map">
+        <picture class="contacts-map__pic">
+          <source width="1440" height="400" type="image/png" media="(min-width: 1440px)" srcset="images/map-desktop.png">
+          <source width="768" height="400" type="image/png" media="(min-width: 768px)" srcset="images/map-tablet.png">
+          <img width="320" height="362" src="images/map-mobile.png" alt="Карта Петербурга">
+        </picture>
+        <iframe class="contacts-map__frame visually-hidden" src="https://yandex.ru/map-widget/v1/?ll=30.325618%2C59.936778&mode=whatshere&utm_campaign=b2bpromo&utm_medium=referral&utm_source=sidesection&whatshere%5Bpoint%5D=30.322875%2C59.938280&whatshere%5Bzoom%5D=16.22&z=16.22"></iframe>
       </div>
-      <nav class="header__nav navigation">
-        <ul class="navigation__list navigation__list--hidden">
-          <li class="navigation__item"><a href="index.html">Главная</a></li>
-          <li class="navigation__item navigation__item--active"><a href="catalog.html">Каталог продукции</a></li>
-          <li class="navigation__item"><a href="program.html">Подбор программы</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main class="page__content page-content">
-    </main>
-    <footer class="page__footer footer">
-      <div class="footer__container">
-        <a class="footer__logo" href="index.html">
-          <span class="visually-hidden">Логотип Cat Energy</span>
-        </a>
-        <ul class="footer__social-list social-list">
-          <li class="social-list__item">
-            <a class="social-list__link social-list__link--vk" href="#">
-              <span class="visually-hidden">Мы ВКонтакте</span>
-            </a>
-          </li>
-          <li class="social-list__item">
-            <a class="social-list__link social-list__link--yt" href="#">
-              <span class="visually-hidden">Мы в YouTube</span>
-            </a>
-          </li>
-          <li class="social-list__item">
-            <a class="social-list__link social-list__link--tg" href="#">
-              <span class="visually-hidden">Мы в Телеграме</span>
-            </a>
-          </li>
-        </ul>
-        <a class="footer__copyright copyright" href="https://htmlacademy.ru/intensive/adaptive">
-          <span class="copyright__text">HTML Academy</span>
-        </a>
+      <div class="contacts__container">
+        <h2 class="contacts__title">Приглашаем<br>к сотрудничеству дилеров!</h2>
+        <address class="contacts__address"><span>ул. Большая Конюшенная, д. 19/8</span><span>Санкт-Петербург</span></address>
       </div>
-    </footer>
-  </div>
+    </section>
+  </main>
+  <footer class="body__footer footer">
+    <div class="footer__container">
+      <a class="footer__logo" href="index.html">
+        <span class="visually-hidden">Логотип Cat Energy</span>
+      </a>
+      <ul class="footer__social-list social-list">
+        <li class="social-list__item">
+          <a class="social-list__link social-list__link--vk" href="#">
+            <span class="visually-hidden">Мы ВКонтакте</span>
+          </a>
+        </li>
+        <li class="social-list__item">
+          <a class="social-list__link social-list__link--yt" href="#">
+            <span class="visually-hidden">Мы в YouTube</span>
+          </a>
+        </li>
+        <li class="social-list__item">
+          <a class="social-list__link social-list__link--tg" href="#">
+            <span class="visually-hidden">Мы в Телеграме</span>
+          </a>
+        </li>
+      </ul>
+      <a class="footer__copyright copyright" href="https://htmlacademy.ru/intensive/adaptive">
+        <span class="copyright__text">HTML Academy</span>
+      </a>
+    </div>
+  </footer>
   <script src="scripts/index.js"></script>
 </body>
 
