--- a/source/index.html
+++ b/source/index.html
@@ -108,11 +108,11 @@
         <div class="example__slider example-slider">
           <picture class="example-slider__img example-slider__img--fat">
             <source width="560" height="512" type="image/png" media="(min-width: 768px)" srcset="images/before-tablet@1x.png 1x, images/before-tablet@2x.png 2x">
-            <img src="images/before-mobile@1x.png" srcset="images/before-mobile@2x.png 2x" width="280" height="256" alt="Толстый кот">
+            <img src="images/before-mobile@2x.png" srcset="images/before-mobile@2x.png 2x" width="280" height="256" alt="Толстый кот">
           </picture>
           <picture class="example-slider__img example-slider__img--slim">
             <source width="560" height="512" type="image/png" media="(min-width: 768px)" srcset="images/after-tablet@1x.png 1x, images/after-tablet@2x.png 2x">
-            <img src="images/after-mobile@1x.png" srcset="images/after-mobile@2x.png 2x" width="280" height="256" alt="Худой кот">
+            <img src="images/after-mobile@2x.png" srcset="images/after-mobile@2x.png 2x" width="280" height="256" alt="Худой кот">
           </picture>
           <button class="example-slider__button" type="button"><span class="visually-hidden">Изменить вид</span></button>
         </div>
@@ -123,7 +123,7 @@
         <picture class="contacts-map__pic">
           <source width="1440" height="400" type="image/png" media="(min-width: 1440px)" srcset="images/map-desktop@1x.png 1x, images/map-desktop@2x.png 2x">
           <source width="768" height="400" type="image/png" media="(min-width: 768px)" srcset="images/map-tablet@1x.png 1x, images/map-tablet@2x.png 2x">
-          <img width="320" height="362" src="images/map-mobile@1x.png" srset="images/map-mobile@2x.png 2x" alt="карта Петербурга">
+          <img width="320" height="362" src="images/map-mobile@2x.png" alt="карта Петербурга">
         </picture>
         <iframe class="contacts-map__frame visually-hidden" src="https://yandex.ru/map-widget/v1/?ll=30.325618%2C59.936778&mode=whatshere&utm_campaign=b2bpromo&utm_medium=referral&utm_source=sidesection&whatshere%5Bpoint%5D=30.322875%2C59.938280&whatshere%5Bzoom%5D=16.22&z=16.22"></iframe>
       </div>
