--- a/source/catalog.html
+++ b/source/catalog.html
@@ -33,7 +33,7 @@
             <img width="101" height="18" src="images/logo-text-mobile.svg" alt="Логотип Cat Energy">
           </picture>
         </a>
-        <button class="logo-container__toggle logo-container__toggle--closed" type="button"><span class="visually-hidden">Открыть меню</span></button>
+        <button class="logo-container__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
       </div>
       <nav class="header__nav navigation">
         <ul class="navigation__list navigation__list--hidden">
